Revert "I change one product name"
This reverts commit a0a49113ff4a8ba61f6aca56cef19f3f44e6bb1c.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="box3 box">
             <div class="box-content">
-                <h2>gaming assceries</h2>
+                <h2>Health & Personal Care</h2>
                 <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
                 <p>See more</p>
             </div>
