Add some product

--- a/index.html
+++ b/index.html
@@ -74,29 +74,29 @@
     <div class="shop-section">
         <div class="box1 box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+                <h2>Gameing Accessories</h2>
+                <div class="box-img" style="background-image: url('box1.jpeg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
-                <h2>Cloths & </h2>
-                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+                <h2>Cloths & Accessories</h2>
+                <div class="box-img" style="background-image: url('box2.jpeg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+                <h2>Kitchen Appliences</h2>
+                <div class="box-img" style="background-image: url('box3.jpeg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+                <h2>Home Appeliences</h2>
+                <div class="box-img" style="background-image: url('box4.jpeg');"></div>
                 <p>See more</p>
             </div>
         </div>
